# test-async-rs

./: Cargo.toml
examples/: 1-block_on.rs  2-multiple-tasks-slow.rs  2-multiple-tasks.rs  3-join.rs  3-multiple-tasks-fast.rs  4-race.rs  5-delay.rs  6-timeout.rs
src/: lib.rs  main.rs
tests/: 1-block_on.rs  2-multiple-tasks.rs  3-join.rs
