[package]
name = "test-async-rs"
version = "0.1.0"
authors = ["Mathias Iversen <work@mathiasiversen.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
async-std = { version = "1.8.0", features = [ "attributes", "unstable" ]}
